# playwirght_using_AI

./: .gitignore  README.md  main.py  pyproject.toml
tests/: conftest.py  test_automation_practice.py
